server/kubernetes_and_openshift/manifests/aqua_csp_007_networking/gateway_api/001_envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aqua-envoy
  namespace: aqua
  labels:
    app: envoy
spec:
  type: ClusterIP
  selector:
    app: envoy
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8443
